add stock validation to business rules in Sale and Product services and improve exception handling logic